feat: update register feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,13 @@
     <string name="confirm_pas_et">Подтвердите пароль</string>
 
     <string name="test_wrapper_text">Loading...</string>
+
+    <!-- Validate fields strings. -->
+    <string name="required">Required!</string>
+    <string name="warn_field_length">Minimum 8 character password</string>
+    <string name="warn_pas_upper_case">Must contain 1 upper-case character</string>
+    <string name="warn_pas_lower_case">Must contain 1 lower-case character</string>
+    <string name="warn_pas_spec_char">Must contain 1 special character (@#\$%^&amp;+=)</string>
+    <string name="warn_email">Invalid Email address</string>
+    <string name="warn_login_spec_char">Must NOT contain special characters (@#\$%^&amp;+=)</string>
 </resources>
